--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ export(spsHr)
 export(spsTimeline)
 export(spsValidate)
 export(tabTitle)
+export(textButton)
 export(textInputGroup)
 export(updateSpsTimeline)
 import(shiny)
@@ -58,4 +59,5 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sort)
 importFrom(stringr,str_split)
 importFrom(stringr,str_which)
+importFrom(utils,packageVersion)
 importFrom(vroom,vroom)
