--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,7 @@ Title: 'systemPipeShiny' UI and Server Components
 Version: 0.1.0
 Date: 2021-02-18
 Authors@R: c(person(given = "Le", family = "Zhang", role = c("aut", "cre"), email = "lezhang100@gmail.com"))
-Description: The systemPipeShiny (SPS) framework comes with many UI and server components. However, installing the whole framework is heavy and takes some time. If you would like to use UI and server components in your own Shiny apps, but do not want to install the whole framework, just install this package.
+Description: The systemPipeShiny (SPS) framework comes with many UI and server components. However, installing the whole framework is heavy and takes some time. If you would like to use UI and server components from SPS in your own Shiny apps, but do not want to install the whole framework, just install this package.
 Depends:
     R (>= 4.0.0),
     shiny (>= 1.5.0),
@@ -23,7 +23,8 @@ Imports:
     shinydashboard,
     shinyjqui,
     vroom,
-    dplyr
+    dplyr,
+    utils
 Suggests:
     testthat
 License: GPL (>= 3)
