--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(animateUI)
 export(animationRemove)
 export(bsHoverPopover)
 export(clearableTextInput)
+export(cssLoader)
 export(dynamicFile)
 export(dynamicFileServer)
 export(gallery)
