--- a/NAMESPACE
+++ b/NAMESPACE
@@ -38,6 +38,8 @@ importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,not_empty)
 importFrom(bsplus,bs_embed_popover)
+importFrom(crayon,blue)
+importFrom(crayon,green)
 importFrom(dplyr,as_tibble)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
