--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: spsComps
 Title: 'systemPipeShiny' UI and Server Components
-Version: 0.2.99.4
-Date: 2021-05-09
+Version: 0.2.99.5
+Date: 2021-05-10
 Authors@R: c(person(given = "Le", family = "Zhang", role = c("aut", "cre"), email = "lezhang100@gmail.com"))
 Description: The systemPipeShiny (SPS) framework comes with many UI and server components. However, installing the whole framework is heavy and takes some time. If you would like to use UI and server components from SPS in your own Shiny apps, do not hesitate to try this package.
 Depends:
     R (>= 4.0.0),
     shiny (>= 1.5.0),
-    spsUtil
+    spsUtil (>= 0.1.2)
 Imports:
     assertthat,
     stringr,
@@ -15,7 +15,6 @@ Imports:
     magrittr,
     bsplus,
     shinyFiles,
-    shinyWidgets,
     shinytoastr,
     shinyAce,
     htmltools,
