--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(animateServer)
 export(animateUI)
 export(animationRemove)
 export(bsHoverPopover)
+export(bsPopover)
 export(clearableTextInput)
 export(cssLoader)
 export(dynamicFile)
