--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ export(animateIcon)
 export(animateServer)
 export(animateUI)
 export(animationRemove)
+export(bsAlert)
 export(bsHoverPopover)
-export(bsPopover)
+export(bsPop)
+export(bsTip)
 export(clearableTextInput)
 export(cssLoader)
 export(dynamicFile)
@@ -30,6 +32,7 @@ export(spsDepend)
 export(spsGoTop)
 export(spsHr)
 export(spsTimeline)
+export(spsTitle)
 export(spsValidate)
 export(tabTitle)
 export(textButton)
@@ -40,7 +43,6 @@ import(spsUtil)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,not_empty)
-importFrom(bsplus,bs_embed_popover)
 importFrom(crayon,blue)
 importFrom(crayon,green)
 importFrom(dplyr,as_tibble)
