--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,15 +13,12 @@ export(bsPop)
 export(bsTip)
 export(clearableTextInput)
 export(cssLoader)
-export(dynamicFile)
-export(dynamicFileServer)
 export(gallery)
 export(heightMatcher)
 export(hexLogo)
 export(hexPanel)
 export(hrefTab)
 export(hrefTable)
-export(loadDF)
 export(pgPaneUI)
 export(pgPaneUpdate)
 export(renderDesc)
@@ -39,21 +36,15 @@ export(textButton)
 export(textInputGroup)
 export(updateSpsTimeline)
 import(shiny)
-import(spsUtil)
 importFrom(R6,R6Class)
 importFrom(assertthat,assert_that)
 importFrom(assertthat,not_empty)
 importFrom(crayon,blue)
 importFrom(crayon,green)
-importFrom(dplyr,as_tibble)
 importFrom(glue,glue)
 importFrom(glue,glue_collapse)
 importFrom(magrittr,"%>%")
 importFrom(shinyAce,is.empty)
-importFrom(shinyFiles,getVolumes)
-importFrom(shinyFiles,parseFilePaths)
-importFrom(shinyFiles,shinyFileChoose)
-importFrom(shinyFiles,shinyFilesButton)
 importFrom(shinytoastr,toastr_error)
 importFrom(shinytoastr,toastr_info)
 importFrom(shinytoastr,toastr_success)
@@ -68,5 +59,5 @@ importFrom(stringr,str_replace_all)
 importFrom(stringr,str_sort)
 importFrom(stringr,str_split)
 importFrom(stringr,str_which)
+importFrom(utils,installed.packages)
 importFrom(utils,packageVersion)
-importFrom(vroom,vroom)
