--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ export(animationRemove)
 export(bsAlert)
 export(bsHoverPopover)
 export(bsPop)
+export(bsPopover)
 export(bsTip)
+export(bsTooltip)
 export(clearableTextInput)
 export(cssLoader)
 export(gallery)
